<resources>
    <string name="app_name">Yerba Buena</string>
    <string name="o">O</string>
    <string name="logo">logo</string>
    <string name="codela">codela</string>
    <string name="hello_blank_fragment">Blank fragment</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <!--OAuth login-->
    <string name="web_client_id">864446602626-isu5o2vsurb0rsudg53ntit7bpb8opni.apps.googleusercontent.com</string>
    <string name="facebook_app_id">605612360973350</string>
    <string name="fb_login_protocol_scheme">fb605612360973350</string>
    <string name="facebook_client_token">394d155cbe052815c7b00730dded73e2</string>

    <!--Messages-->
    <string name="msg_order_added_success">Tu pedido se ha agregado correctamente</string>
    <string name="msg_request_permission_rationale">Para poder brindarte un mejor servicio %1$s necesita acceder a tu ubicación</string>
    <string name="msg_request_permission">Adquiriendo permisos</string>
    <string name="email_not_verified_message">El correo <b>%1$s</b> aun no ha sido verificado.\n\n¿Deseas recibir un codigo de verificacion ahora?</string>
    <string name="email_not_verified_title">Verificacion de correo</string>
    <string name="email_verification_sent">Correo de verificacion enviado.\nPor favor, revisa tu buzon o spam e intenta de nuevo</string>
    <string name="email_password_reset_title">Reestablecer contraseña</string>
    <string name="email_password_reset_message">¿Deseas recibir un correo ahora para reestablecer tu contraseña?</string>
    <string name="email_password_reset_sent">Se ha enviado un correo para reestablecer su contraseña.</string>
    <!--Login Buttons-->
    <string name="signin">Iniciar sesión</string>
    <string name="signup">Crear cuenta</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <!--Toolbar-->
    <string name="search">Buscar</string>
    <!-- ****** Menu de navegacion ****** -->
    <string name="logout">Cerrar sesión</string>
    <string name="test">Pago</string>
    <!--Encabezado-->
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <!--Administrador-->
    <string name="products">Productos</string>
    <string name="employes">Personal</string>
    <string name="clients">Clientes</string>
    <string name="reports">Reportes</string>
    <!--Repartidor-->
    <string name="delivery">Repartidor</string>
    <string name="orderlist">Lista de pedidos</string>
    <string name="location">Ubicación</string>
    <!--Cliente-->
    <string name="home">Inicio</string>
    <string name="menu">Menú</string>
    <string name="promotions">Promociónes</string>
    <string name="orders">Pedidos</string>
    <string name="notifications">Notificaciónes</string>
    <!-- ******************************** -->
    <!--Variables-->
    <string name="default_role">Cliente</string>
    <!--Validaciones-->
    <string name="invalid_email">El correo que ingresaste no es válido.</string>
    <string name="invalid_password_lenght">La contraseña debe contener más de 8 carácteres.</string>
    <string name="invalid_phone">El número de telefono que ingresaste no es válido.</string>
    <string name="passwords_not_match">Las contraseñas que ingresaste no coinciden</string>
    <string name="invalid_password">La contraseña que ingresaste no es válida.\nDebe contener almenos 8 carácteres con una combinación de números, mayúsculas y carácteres especiáles</string>
    <string name="empty_field">Este campo no debe estar vacío.</string>

    <!--Personal Card-->
    <string name="personal_username">Nombre: $1$s</string>
    <string name="personal_userphone">Telefono: $1$s</string>
    <string name="personal_useremail">Email: $1$s</string>

    <!--Notification Card-->
    <string name="notification_title">Title</string>
    <string name="notification_subtitle">Subtitle</string>
    <string name="notification_body">Body</string>

    <!--Instructions For Card Payment-->
    <string name="InformationForCashPayment">Tu pago sera en efectivo al momento de la entrega</string>
    <string name="InstructionsForCardPayment">Indicale al cajero que es un <b>pago de servicios a Yerba Buena </b> y presenta este código: </string>

    <!--Payment Dropdown Menu-->
    <string-array name="tipos_de_pago">
        <item>Efectivo</item>
        <item>Transferencia</item>
    </string-array>

    <!--Total Price To Pay-->
    <string name="TotalPrice"><b>Total:</b> $ %1$.2f</string>


    <!--staff list information-->
    <string name="StaffName"></string>
    <string name="StaffPhoneString"><a name="Phone">Teléfono: </a>7721096090 </string>
    <string name="StaffAddressString"><a name="Address">Domicilio: </a>Ixmiquilpan, Hidalgo, Mèxico </string>
    <string name="add_new_item">Agregar menu</string>
    <string name="add_new_user">Agregar usuario</string>


</resources>