<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/products"
                    android:checkable="true"
                    android:enabled="true"
                    android:icon="@drawable/menu_icon"
                    android:title="@string/orderlist"
                    android:visible="true" />

                <item
                    android:id="@+id/location"
                    android:checkable="true"
                    android:icon="@drawable/menu_icon"
                    android:title="@string/location" />

            </group>
        </menu>
    </item>
    <group>
    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/menu_icon"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
    </group>
</menu>