<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notification_card"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:foreground="@drawable/effect"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/notification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notification_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_subtitle"
            android:textColor="@color/cardview_dark_background"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/notification_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_body"
            android:textColor="@color/gray"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>