<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="false"
    android:clickable="true"
    android:foreground="@drawable/effect"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:clipToPadding="false"
            app:cardCornerRadius="180dp"
            app:cardUseCompatPadding="false">

            <ImageView
                android:id="@+id/personal_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/alara_alvarez" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_username"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/userphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_userphone"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/useremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_useremail"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>